<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">

  <TextView
      android:id="@+id/textViewHello"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:gravity="center"
      android:text="@string/hello_user"
      android:textColor="@color/darkBrown"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <RadioGroup
      android:id="@+id/RadioGroupDrink"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewHello"
      app:layout_constraintVertical_bias="0.0">

    <RadioButton
        android:id="@+id/radioButtonTea"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:checked="true"
        android:onClick="onClickChangeOrder"
        android:text="@string/tea"
        android:textColor="@color/white" />

    <RadioButton
        android:id="@+id/radioButtonCoffee"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_margin="8dp"
        android:onClick="onClickChangeOrder"
        android:text="@string/coffee"
        android:textColor="@color/white" />
  </RadioGroup>

  <TextView
      android:id="@+id/textViewAdditions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:gravity="center"
      android:text="@string/additions"
      android:textColor="@color/darkBrown"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/RadioGroupDrink" />

  <CheckBox
      android:id="@+id/checkboxSugar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/sugar"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.022"
      app:layout_constraintStart_toEndOf="@+id/checkboxMilk"
      app:layout_constraintTop_toBottomOf="@id/textViewAdditions" />

  <CheckBox
      android:id="@+id/checkboxLemon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/lemon"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.08"
      app:layout_constraintStart_toEndOf="@id/checkboxSugar"
      app:layout_constraintTop_toBottomOf="@id/textViewAdditions" />

  <TextView
      android:id="@+id/textViewChooseDrink"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:gravity="center"
      android:text="@string/choose_order"
      android:textColor="@color/darkBrown"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.554"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.321" />

  <Spinner
      android:id="@+id/spinnerCoffee"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:layout_marginTop="4dp"
      android:entries="@array/options_of_coffee"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink" />

  <ImageView
      android:id="@+id/buttonSendOrder"
      android:layout_width="372dp"
      android:layout_height="271dp"
      android:layout_margin="8dp"
      android:contentDescription="@string/button_send_description"
      android:onClick="onClickSendOrder"
      android:src="@drawable/button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.589"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spinnerCoffee"
      app:layout_constraintVertical_bias="0.184" />

  <Spinner
      android:id="@+id/spinnerTea"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:layout_marginTop="60dp"
      android:entries="@array/options_of_tea"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewChooseDrink" />

  <CheckBox
      android:id="@+id/checkboxMilk"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/milk"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.238"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textViewAdditions" />

</androidx.constraintlayout.widget.ConstraintLayout>